fix: z-indexとisolateを調整して適切な位置関係になるように変更

--- a/src/global/global.css
+++ b/src/global/global.css
@@ -49,6 +49,7 @@ body {
 header {
   position: sticky;
   top: 0;
+  z-index: 1;
   margin-bottom: 4px;
 }
 
